<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">


    <FrameLayout
        android:layout_width="178dp"
        android:layout_height="168dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp">

        <!--        <ImageView-->
        <!--            android:id="@+id/profile_image"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:contentDescription="@string/profile_picture"-->
        <!--            android:src="@drawable/person_icon_circle"-->
        <!--            android:scaleType="fitCenter"/>-->

        <!--        <ImageView-->
        <!--            android:id="@+id/profile_image"-->
        <!--            android:layout_width="160dp"-->
        <!--            android:layout_height="160dp"-->
        <!--            android:layout_marginBottom="40dp"-->
        <!--            android:background="@drawable/circular_bg"-->
        <!--            android:backgroundTint="@color/my_primary"-->
        <!--            android:scaleType="centerCrop"-->
        <!--            android:src="@drawable/profile_icon" />-->
        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_secondary"
            android:scaleType="centerCrop"
            android:src="@drawable/person_icon_circle" />

                <ImageView
                    android:id="@+id/add_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/add_photo"
                    android:src="@drawable/plus_svgrepo_com"
                    app:tint="@color/my_primary" />

    </FrameLayout>

    <EditText
        android:id="@+id/profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="6dp"
        android:fontFamily="@font/urbanist_regular"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/profile_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="6dp"
        android:enabled="false"
        android:fontFamily="@font/urbanist_regular"
        android:hint="@string/mobile"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575" />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="6dp"
        android:entries="@array/language_labels"
        android:fontFamily="@font/urbanist_regular"
        android:minHeight="48dp"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <Button
            android:id="@+id/update_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_corner"
            android:fontFamily="@font/urbanist_regular"
            android:padding="10dp"
            android:text="@string/update_profile" />


        <ProgressBar
            android:id="@+id/profile_progress_bar"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/light_purple" />

    </LinearLayout>

    <TextView
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/logout" />

</LinearLayout>